--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <title>António Cruz - Portfolio</title>
 </head>
 <body>
@@ -13,21 +16,19 @@
             <ul><p>Web Developer</p></ul>
         </div>
         <div class="right">
-            <ul><a href="#home">Home</a></ul>
-            <ul><a href="#about">About</a></ul>
-            <ul><a href="#projects">Projects</a></ul>
-            <ul><a href="#contact">Contact</a></ul>
+            <ul><a href="#about">Sobre</a></ul>
+            <ul><a href="#path">Percurso</a></ul>
+            <ul><a href="#projects">Projetos</a></ul>
+            <ul><a href="#contact">Contactos</a></ul>
         </div>
     </nav>
-    
 
     <section id="home">
         <div class="text">
-            <h2 class="center big">Olá! O meu nome é</h2>
-            <h1 class="center giant">António Cruz</h1>
-            <h2 class="center big">e sou recém-licenciado em Engenharia Informática</h2>
-            <p class="center medium">Depois de três anos de muita aprendizagem e evolução a nível pessoal e profissional,</p>
-            <p class="center medium">procuro entrar no mundo do trabalho e continuar a desenvolver as minhas capacidades.</p>
+            <h2 class="center bigHome">Olá! O meu nome é</h2>
+            <h1 class="center giantHome">António Cruz</h1>
+            <h2 class="center bigHome">e sou recém-licenciado em Engenharia Informática.</h2>
+            <p class="center mediumHome">Depois de três anos de muita aprendizagem e evolução a nível pessoal e profissional, procuro entrar no mundo do trabalho e continuar a desenvolver as minhas capacidades.</p>
         </div>
         <div class="image">
             <img id="me" src="me.jpg" alt="me.jpg">
@@ -35,27 +36,44 @@
     </section>
 
     <section id="about">
-        <h2>About Me</h2>
+        <h2>Sobre Mim</h2>
         <div class="about-content">
-            <p>Estudante responsável, dedicado e
-                trabalhador, encontro-me atualmente
-                a caminho do terceiro ano da
-                licenciatura
-                de
-                engenharia
-                informática, na Universidade da Beira
-                Interior, com o sonho de trabalhar na
-                área num futuro próximo. Fluente em
-                português e inglês, com grande
-                capacidade
-                de
-                comunicação
-                e
-                organização, espírito de equipa, muita
-                ambição e iniciativa para aprender,
-                procuro ganhar experiência para
-                desenvolver o meu trabalho e crescer
-                como pessoa.</p>
+            <p>Estudante responsável, dedicado e trabalhador, encontro-me atualmente a caminho do terceiro ano da licenciatura de engenharia informática, 
+                na Universidade da Beira Interior, com o sonho de trabalhar na área num futuro próximo. Fluente em português e inglês, com grande capacidade
+                de comunicação e organização, espírito de equipa, muita ambição e iniciativa para aprender, procuro ganhar experiência para desenvolver 
+                o meu trabalho e crescer como pessoa.</p>
+        </div>
+    </section>
+
+    <section id="path">
+        <h2>O Meu Percurso</h2>
+        <div class="path-content">
+            <div class="path-item center">
+                <h3>2018</h3>
+                <p class="big">Entrada no secundário</p>
+                <p class="medium">No Curso de Ciências e Tecnologias</p>
+                <p class="medium">Na Escola Secundária Frei Heitor Pinto</p>
+            </div>
+            <div class="path-item center">
+                <h3>2021</h3>
+                <p class="big">Entrada na Universidade da Beira Interior (UBI)</p>
+                <p class="medium">Na Licenciatura em Engenharia Informática</p>
+            </div>
+            <div class="path-item center">
+                <h3>2022</h3>
+                <p class="big">Trabalho como Barman</p>
+                <p class="medium">Piscina da Orca (Fundão), Entre Julho e Agosto</p>
+            </div>
+            <div class="path-item center">
+                <h3>2023</h3>
+                <p class="big">Estágio de Verão</p>
+                <p class="medium">Celfinet, Entre Julho e Setembro</p>
+                <p class="medium">Departamento de Data Management & Analytics</p>
+            </div>
+            <div class="path-item center">
+                <h3>2024</h3>
+                <p class="big">Conclusão da Licenciatura</p>
+            </div>
         </div>
     </section>
 
@@ -73,11 +91,12 @@
     </section>
 
     <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: your.email@example.com</p>
-        <p>LinkedIn: linkedin.com/yourname</p>
-        <p>GitHub: github.com/yourusername</p>
+        <h2>Contactos</h2>
+        <p>Email: <!-- <a href="mailto:appaiscruz@gmail.com"> -->appaiscruz@gmail.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/antonio-cruz-ac21/" target="_blank">linkedin.com/in/antonio-cruz-ac21</a></p>
+        <p>GitHub: <a href="https://github.com/Tope-do-Drip" target="_blank">github.com/Tope-do-Drip</a></p>
     </section>
+    
 
     <footer>
         <p>&copy; 2024 António Cruz. All rights reserved.</p>
