--- a/index.html
+++ b/index.html
@@ -47,32 +47,33 @@
 
     <section id="path">
         <h2>O Meu Percurso</h2>
-        <div class="path-content">
-            <div class="path-item center">
+        <div class="timeline">
+            <div class="timeline-item center">
                 <h3>2018</h3>
                 <p class="big">Entrada no secundário</p>
                 <p class="medium">No Curso de Ciências e Tecnologias</p>
                 <p class="medium">Na Escola Secundária Frei Heitor Pinto</p>
             </div>
-            <div class="path-item center">
+            <div class="timeline-item center">
                 <h3>2021</h3>
                 <p class="big">Entrada na Universidade da Beira Interior (UBI)</p>
                 <p class="medium">Na Licenciatura em Engenharia Informática</p>
             </div>
-            <div class="path-item center">
+            <div class="timeline-item center">
                 <h3>2022</h3>
                 <p class="big">Trabalho como Barman</p>
                 <p class="medium">Piscina da Orca (Fundão), Entre Julho e Agosto</p>
             </div>
-            <div class="path-item center">
+            <div class="timeline-item center">
                 <h3>2023</h3>
                 <p class="big">Estágio de Verão</p>
                 <p class="medium">Celfinet, Entre Julho e Setembro</p>
                 <p class="medium">Departamento de Data Management & Analytics</p>
             </div>
-            <div class="path-item center">
+            <div class="timeline-item center">
                 <h3>2024</h3>
                 <p class="big">Conclusão da Licenciatura</p>
+                <p class="medium">Em Engenharia Informática</p>
             </div>
         </div>
     </section>
@@ -97,7 +98,6 @@
         <p>GitHub: <a href="https://github.com/Tope-do-Drip" target="_blank">github.com/Tope-do-Drip</a></p>
     </section>
     
-
     <footer>
         <p>&copy; 2024 António Cruz. All rights reserved.</p>
     </footer>
