mudanças na foto de perfil e certificados

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
             </div>
         </div>
         <div class="image">
-            <img id="me" src="me.jpg" alt="me.jpg">
+            <div class="box">
+                <span></span>
+                <img id="me" src="me.jpg" alt="me.jpg">
+            </div>
+            <div class="border-blur"></div>
             <h2>Contacte-me</h2>
             <p class="medium mail"><i class="fa-solid fa-square-envelope mail"></i> appaiscruz@gmail.com</p>
             <a href="mailto:appaiscruz@gmail.com"></a>
@@ -150,7 +154,7 @@
             <div class="card">
                 <a href="https://github.com/zazedd/money" target="_blank"></a>
                 <div class="card-content">
-                    <img src="sentimentalyst.png" alt="money">
+                    <img src="money.png" alt="money">
                     <h3>Money</h3>  
                     <h4>Uma aplicação móvel para gestão de orçamentos de uma empresa de construção civil</h4>
                 </div>
@@ -160,6 +164,7 @@
                     <h3>Adios</h3>  
                     <h4>See you...</h4>
                 </div>
+            </div>
         </div>
     </section>
 
@@ -167,20 +172,28 @@
         <h2>Certificados</h2>
         <div id="certs">
             <div class="certificate-box" onclick="openPdf('Summer_Internship.pdf')">
-                <h3>Estágio de Verão</h3>
-                <p>No Departamento de Data Management & Analytics da Celfinet</p>
+                <div class="cert-content">
+                    <h3>Estágio de Verão</h3>
+                    <p>No Departamento de Data Management & Analytics da Celfinet</p>
+                </div>
             </div>
             <div class="certificate-box" onclick="openPdf('IOT.pdf')">
-                <h3>Internet Das Coisas</h3>
-                <p>Formação Sobre os Conceitos Básicos da Internet Of Things (IOT)</p>
+                <div class="cert-content">
+                    <h3>Internet Das Coisas</h3>
+                    <p>Formação Sobre os Conceitos Básicos da Internet Of Things (IOT)</p>
+                </div>
             </div>
             <div class="certificate-box" onclick="openPdf('Telecom.pdf')">
-                <h3>Telecomunicações</h3>
-                <p>Formação Sobre os Conceitos Básicos de Telecomunicações</p>
+                <div class="cert-content">
+                    <h3>Telecomunicações</h3>
+                    <p>Formação Sobre os Conceitos Básicos de Telecomunicações</p>
+                </div>
             </div>
             <div class="certificate-box" onclick="openPdf('Scrum.pdf')">
-                <h3>Scrum</h3>
-                <p>Gestão de Projetos com Métodos Ágeis</p>
+                <div class="cert-content">
+                    <h3>Scrum</h3>
+                    <p>Gestão de Projetos com Métodos Ágeis</p>
+                </div>
             </div>
         </div>
     </section>
