galeria e algumas mudanças

--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
                 de ajudar os outros. Sou uma pessoa muito positiva, que gosta de ver o lado bom das coisas e acho que a vida é feita de desafios e obstáculos, 
                 mas também de oportunidades e memórias, pelo que é importante ultrapassar as dificuldades e aproveitar as oportunidades.
             </p>
+            <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
+                <img class="image" src="solarSystem.png" draggable="false" />
+                <img class="image" src="solarSystem.png" draggable="false" />
+                <img class="image" src="solarSystem.png" draggable="false" />
+                <img class="image" src="solarSystem.png" draggable="false" />
+                <img class="image" src="solarSystem.png" draggable="false" />
+                <img class="image" src="solarSystem.png" draggable="false" />
+                <img class="image" src="solarSystem.png" draggable="false" />
+                <img class="image" src="solarSystem.png" draggable="false" />
+            </div>
         </div>
     </section>
 
@@ -172,28 +182,20 @@
         <h2>Certificados</h2>
         <div id="certs">
             <div class="certificate-box" onclick="openPdf('Summer_Internship.pdf')">
-                <div class="cert-content">
-                    <h3>Estágio de Verão</h3>
-                    <p>No Departamento de Data Management & Analytics da Celfinet</p>
-                </div>
+                <h3>Estágio de Verão</h3>
+                <p>No Departamento de Data Management & Analytics da Celfinet</p>
             </div>
             <div class="certificate-box" onclick="openPdf('IOT.pdf')">
-                <div class="cert-content">
-                    <h3>Internet Das Coisas</h3>
-                    <p>Formação Sobre os Conceitos Básicos da Internet Of Things (IOT)</p>
-                </div>
+                <h3>Internet Das Coisas</h3>
+                <p>Formação Sobre os Conceitos Básicos da Internet Of Things (IOT)</p>
             </div>
             <div class="certificate-box" onclick="openPdf('Telecom.pdf')">
-                <div class="cert-content">
-                    <h3>Telecomunicações</h3>
-                    <p>Formação Sobre os Conceitos Básicos de Telecomunicações</p>
-                </div>
+                <h3>Telecomunicações</h3>
+                <p>Formação Sobre os Conceitos Básicos de Telecomunicações</p>
             </div>
             <div class="certificate-box" onclick="openPdf('Scrum.pdf')">
-                <div class="cert-content">
-                    <h3>Scrum</h3>
-                    <p>Gestão de Projetos com Métodos Ágeis</p>
-                </div>
+                <h3>Scrum</h3>
+                <p>Gestão de Projetos com Métodos Ágeis</p>
             </div>
         </div>
     </section>
