mudança de cores e galeria começada de novo

--- a/index.html
+++ b/index.html
@@ -70,16 +70,17 @@
                 de ajudar os outros. Sou uma pessoa muito positiva, que gosta de ver o lado bom das coisas e acho que a vida é feita de desafios e obstáculos, 
                 mas também de oportunidades e memórias, pelo que é importante ultrapassar as dificuldades e aproveitar as oportunidades.
             </p>
-            <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
-                <img class="image" src="solarSystem.png" draggable="false" />
-                <img class="image" src="solarSystem.png" draggable="false" />
-                <img class="image" src="solarSystem.png" draggable="false" />
-                <img class="image" src="solarSystem.png" draggable="false" />
-                <img class="image" src="solarSystem.png" draggable="false" />
-                <img class="image" src="solarSystem.png" draggable="false" />
-                <img class="image" src="solarSystem.png" draggable="false" />
-                <img class="image" src="solarSystem.png" draggable="false" />
+        <div class="gallery">
+            <div class="gallery-image">
+                <img src="me.jpg" alt="me">
             </div>
+            <div class="gallery-image">
+                <img src="money.png" alt="money">
+            </div>
+            <div class="gallery-image">
+                <img src="sentimentalyst.png" alt="sentimentalyst">
+            </div>
+        </div>    
         </div>
     </section>
 
@@ -170,12 +171,6 @@
                     <img src="money.png" alt="money">
                     <h3>Money</h3>  
                     <h4>Uma aplicação móvel para gestão de orçamentos de uma empresa de construção civil</h4>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-content">
-                    <h3>Adios</h3>  
-                    <h4>See you...</h4>
                 </div>
             </div>
         </div>
