galeria quase feita, falta a animação

--- a/index.html
+++ b/index.html
@@ -69,19 +69,33 @@
                 e dou sempre o meu melhor em tudo o que faço. Sou também uma pessoa muito responsável, empenhada e dedicada, que gosta de trabalhar em equipa e 
                 de ajudar os outros. Sou uma pessoa muito positiva, que gosta de ver o lado bom das coisas e acho que a vida é feita de desafios e obstáculos, 
                 mas também de oportunidades e memórias, pelo que é importante ultrapassar as dificuldades e aproveitar as oportunidades.
-            </p>
-        <div class="gallery">
-            <div class="gallery-image">
-                <img src="me.jpg" alt="me">
-            </div>
-            <div class="gallery-image">
-                <img src="money.png" alt="money">
-            </div>
-            <div class="gallery-image">
-                <img src="sentimentalyst.png" alt="sentimentalyst">
-            </div>
-        </div>    
+            </p>  
         </div>
+        <div class="gallery">
+            <div class="gallery-images">
+                <div class="gallery-image">
+                    <img src="me.jpg" alt="me">
+                </div>
+                <div class="gallery-image">
+                    <img src="money.png" alt="money">
+                </div>
+                <div class="gallery-image">
+                    <img src="sentimentalyst.png" alt="sentimentalyst">
+                </div>
+                <div class="gallery-image">
+                    <img src="me.jpg" alt="me">
+                </div>
+                <div class="gallery-image">
+                    <img src="money.png" alt="money">
+                </div>
+                <div class="gallery-image">
+                    <img src="sentimentalyst.png" alt="sentimentalyst">
+                </div>
+            </div>
+            <button class="prev-btn"><i class="fas fa-chevron-left"></i></button>
+            <button class="next-btn"><i class="fas fa-chevron-right"></i></button>
+        </div>
+        
     </section>
 
     <section id="path">
