--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h2>Ou Encontre-me Online!</h2>
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/antonio-cruz-ac21" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/Tope-do-Drip" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/AntonioPCruz" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </section>
@@ -54,7 +54,7 @@
                 línguas, experiências e formas de pensar.
                 Apesar de gostar um pouco de tudo dentro da informática, sou um entusiasta em desenvolvimento de software e inteligência artificial, 
                 sendo estas as áreas em que mais gostei de trabalhar durante a minha licenciatura, depois de tantos projetos realizados, e também as áreas que tenho mais 
-                interesse em desenvolver e aprender. 
+                interesse em desenvolver e aprender.
                 Não gosto de não ter nada para fazer, gosto de ocupar o meu tempo a aprender coisas novas, dando muita importância à cultura geral,
                 e aproveitando sempre para aprender novas tecnologias e para as tentar aplicar em projetos pessoais, como forma de melhorar as minhas capacidades e de
                 me manter atualizado. 
@@ -73,29 +73,48 @@
         </div>
         <div class="gallery">
             <div class="gallery-images">
-                <div class="gallery-image">
-                    <img src="me.jpg" alt="me">
+                <div class="gallery-image first">
+                    <div class="image-wrapper">
+                        <img src="me.jpg" alt="me" class="zoomed-image">
+                        <div class="zoomed-text">example here...</div>
+                    </div>
                 </div>
                 <div class="gallery-image">
-                    <img src="money.png" alt="money">
+                    <div class="image-wrapper">
+                        <img src="money.png" alt="money" class="zoomed-image">
+                        <div class="zoomed-text">example here...</div>
+                    </div>
                 </div>
                 <div class="gallery-image">
-                    <img src="sentimentalyst.png" alt="sentimentalyst">
+                    <div class="image-wrapper">
+                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image">
+                        <div class="zoomed-text">example here...</div>
+                    </div>
                 </div>
                 <div class="gallery-image">
-                    <img src="me.jpg" alt="me">
+                    <div class="image-wrapper">
+                        <img src="me.jpg" alt="me" class="zoomed-image">
+                        <div class="zoomed-text">example here...</div>
+                    </div>
                 </div>
                 <div class="gallery-image">
-                    <img src="money.png" alt="money">
+                    <div class="image-wrapper">
+                        <img src="money.png" alt="money" class="zoomed-image">
+                        <div class="zoomed-text">Apesar de gostar um pouco de tudo dentro da informática, sou um entusiasta em desenvolvimento de software e inteligência artificial, 
+                            sendo estas as áreas em que mais gostei de trabalhar durante a minha licenciatura, depois de tantos projetos realizados, e também as áreas que tenho mais 
+                            interesse em desenvolver e aprender.</div>
+                    </div>
                 </div>
-                <div class="gallery-image">
-                    <img src="sentimentalyst.png" alt="sentimentalyst">
+                <div class="gallery-image last">
+                    <div class="image-wrapper">
+                        <img src="sentimentalyst.png" alt="sentimentalyst" class="zoomed-image">
+                        <div class="zoomed-text">example here...</div>
+                    </div>
                 </div>
             </div>
             <button class="prev-btn"><i class="fas fa-chevron-left"></i></button>
             <button class="next-btn"><i class="fas fa-chevron-right"></i></button>
-        </div>
-        
+        </div>    
     </section>
 
     <section id="path">
@@ -104,9 +123,6 @@
             <div class="timeline">
                 <div class="timeline-item center" data-tooltip="Entrada no secundário">
                     <h3>2018</h3>
-                    <div class="image-container">
-                        <img src="secundario.jpg" alt="secundario">
-                    </div>
                     <div class="text-content">
                         <p class="big">Entrada no secundário</p>
                         <p class="medium">No Curso de Ciências e Tecnologias</p>
@@ -115,9 +131,6 @@
                 </div>
                 <div class="timeline-item center" data-tooltip="Entrada na Universidade da Beira Interior (UBI)">
                     <h3>2021</h3>
-                    <div class="image-container">
-                        <img src="secundario.jpg" alt="secundario">
-                    </div>
                     <div class="text-content">
                         <p class="big">Entrada no Ensino Superior</p>
                         <p class="medium">Na Licenciatura em Engenharia Informática</p>
@@ -126,9 +139,6 @@
                 </div>
                 <div class="timeline-item center" data-tooltip="Trabalho como Barman">
                     <h3>2022</h3>
-                    <div class="image-container">
-                        <img src="secundario.jpg" alt="secundario">
-                    </div>
                     <div class="text-content">
                         <p class="big">Trabalho como Barman</p>
                         <p class="medium">Nos Meses de Julho e Agosto</p>
@@ -137,9 +147,6 @@
                 </div>
                 <div class="timeline-item center" data-tooltip="Estágio de Verão">
                     <h3>2023</h3>
-                    <div class="image-container">
-                        <img src="secundario.jpg" alt="secundario">
-                    </div>
                     <div class="text-content">
                         <p class="big">Estágio de Verão</p>
                         <p class="medium">Entre os Meses de Julho e Setembro</p>
@@ -148,9 +155,6 @@
                 </div>
                 <div class="timeline-item center" data-tooltip="Conclusão da Licenciatura">
                     <h3>2024</h3>
-                    <div class="image-container">
-                        <img src="secundario.jpg" alt="secundario">
-                    </div>
                     <div class="text-content">
                         <p class="big">Conclusão da Licenciatura</p>
                         <p class="medium">Em Engenharia Informática</p>
