--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <title>António Cruz - Portfolio</title>
 </head>
 <body>
-    <section id="home">
+    <div class="cursor"></div>
+    <section id="home" class="hidden">
         <div class="text">
             <p class="center bigHome">Olá! O meu nome é</p>
             <h1 data-value="ANTÓNIO CRUZ">ANTÓNIO CRUZ</h1>
@@ -44,7 +45,7 @@
         </div>
     </section>
 
-    <section id="about">
+    <section id="about" class="hidden">
         <h2>Sobre Mim</h2>
         <div class="about-content">
             <p>Após o término da Licenciatura em Engenharia Informática, na Universidade da Beira Interior (UBI) procuro atualmente entrar no mercado de trabalho, 
@@ -117,7 +118,7 @@
         </div>    
     </section>
 
-    <section id="path">
+    <section id="path" class="hidden">
         <h2>O Meu Percurso</h2>
         <div class="tooltip-container">
             <div class="timeline">
@@ -164,7 +165,7 @@
         </div>
     </section>
 
-    <section id="projects">
+    <section id="projects" class="hidden">
         <h2>Projetos</h2>
         <div id="cards">
             <div class="card">
@@ -194,7 +195,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="hidden">
         <h2>Certificados</h2>
         <div id="certs">
             <div class="certificate-box" onclick="openPdf('Summer_Internship.pdf')">
