loading page e pequenas mudanças

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 </head>
 <body>
     <div class="cursor"></div>
+    <div id="name-screen" class="name-screen">
+        <h2 class="huge-name fade-in">ANTÓNIO CRUZ</h2>
+    </div>
     <section id="home" class="hidden">
         <div class="text">
             <p class="center bigHome">Olá! O meu nome é</p>
@@ -25,7 +28,7 @@
                 Procuro agora uma oportunidade de trabalho para desenvolver as minhas capacidades e crescer como profissional e como pessoa.
             </p>
             <div class="cv">
-                <a href="CV-AntonioCruz.pdf" target="_blank">Curriculum Vitae</a>
+                <a href="CV - AntonioCruz.pdf" target="_blank">Curriculum Vitae</a>
             </div>
         </div>
         <div class="image">
@@ -47,31 +50,6 @@
 
     <section id="about" class="hidden">
         <h2>Sobre Mim</h2>
-        <div class="about-content">
-            <p>Após o término da Licenciatura em Engenharia Informática, na Universidade da Beira Interior (UBI) procuro atualmente entrar no mercado de trabalho, 
-                dentro da área, para ganhar experiência, crescer como profissional e Ser Humano, e desenvolver as minhas capacidades, tanto hard skills como soft skills. 
-                Português é a minha língua materna, mas sou também fluente em inglês.
-                Adoro conversar, conhecer novas pessoas e aprender com elas, sendo muito curioso e querendo sempre saber mais sobre outras culturas, 
-                línguas, experiências e formas de pensar.
-                Apesar de gostar um pouco de tudo dentro da informática, sou um entusiasta em desenvolvimento de software e inteligência artificial, 
-                sendo estas as áreas em que mais gostei de trabalhar durante a minha licenciatura, depois de tantos projetos realizados, e também as áreas que tenho mais 
-                interesse em desenvolver e aprender.
-                Não gosto de não ter nada para fazer, gosto de ocupar o meu tempo a aprender coisas novas, dando muita importância à cultura geral,
-                e aproveitando sempre para aprender novas tecnologias e para as tentar aplicar em projetos pessoais, como forma de melhorar as minhas capacidades e de
-                me manter atualizado. 
-                Para além disso, gosto de desporto, tendo sido já federado em basquetebol, dos 5 aos 14 anos, gosto de ler e ver filmes ou séries, 
-                com um gosto especial por livros de mistério, ficção científica, ação e aventura e, claro, é sempre bom jogar um pouco de vez em quando.
-                Sou um amante de música e ouvi-la faz parte do meu dia-a-dia. Gosto também de tocar, tendo tido aulas de violino durante dois anos
-                e tendo aprendido a tocar piano e guitarra sozinho, pois é uma forma de relaxar e de me divertir. Para além disto também adoro cantar,
-                sendo parte do Coro Misto da Beira Interior desde 2017, tendo participado em vários concertos e concursos nacionais e internacionais e fazendo assim
-                muitas boas memórias que guardo para a vida.
-                Sou uma pessoa muito organizada e metódica, gosto de planear as coisas com antecedência e de ter tudo bem organizado,
-                pois acredito que assim consigo ser mais produtivo e eficiente. Sou um pouco perfecionista, pelo que gosto de deixar sempre tudo o melhor possível
-                e dou sempre o meu melhor em tudo o que faço. Sou também uma pessoa muito responsável, empenhada e dedicada, que gosta de trabalhar em equipa e 
-                de ajudar os outros. Sou uma pessoa muito positiva, que gosta de ver o lado bom das coisas e acho que a vida é feita de desafios e obstáculos, 
-                mas também de oportunidades e memórias, pelo que é importante ultrapassar as dificuldades e aproveitar as oportunidades.
-            </p>  
-        </div>
         <div class="gallery">
             <div class="gallery-images">
                 <div class="gallery-image first">
@@ -118,52 +96,54 @@
         </div>    
     </section>
 
-    <section id="path" class="hidden">
+    <section class="timeline hidden">
         <h2>O Meu Percurso</h2>
-        <div class="tooltip-container">
-            <div class="timeline">
-                <div class="timeline-item center" data-tooltip="Entrada no secundário">
-                    <h3>2018</h3>
-                    <div class="text-content">
-                        <p class="big">Entrada no secundário</p>
-                        <p class="medium">No Curso de Ciências e Tecnologias</p>
-                        <p class="medium">Na Escola Secundária Frei Heitor Pinto (ESFHP)</p>
-                    </div>
-                </div>
-                <div class="timeline-item center" data-tooltip="Entrada na Universidade da Beira Interior (UBI)">
-                    <h3>2021</h3>
-                    <div class="text-content">
-                        <p class="big">Entrada no Ensino Superior</p>
-                        <p class="medium">Na Licenciatura em Engenharia Informática</p>
-                        <p class="medium">Na Universidade da Beira Interior (UBI)</p>
-                    </div>
-                </div>
-                <div class="timeline-item center" data-tooltip="Trabalho como Barman">
-                    <h3>2022</h3>
-                    <div class="text-content">
-                        <p class="big">Trabalho como Barman</p>
-                        <p class="medium">Nos Meses de Julho e Agosto</p>
-                        <p class="medium">Na Piscina da Orca (Fundão)</p>
-                    </div>
-                </div>
-                <div class="timeline-item center" data-tooltip="Estágio de Verão">
-                    <h3>2023</h3>
-                    <div class="text-content">
-                        <p class="big">Estágio de Verão</p>
-                        <p class="medium">Entre os Meses de Julho e Setembro</p>
-                        <p class="medium">Na Celfinet, Departamento de Data Management & Analytics</p>
-                    </div>
-                </div>
-                <div class="timeline-item center" data-tooltip="Conclusão da Licenciatura">
-                    <h3>2024</h3>
-                    <div class="text-content">
-                        <p class="big">Conclusão da Licenciatura</p>
-                        <p class="medium">Em Engenharia Informática</p>
-                    </div>
-                </div>
-            </div>
+        <div class="line"></div>
+        <div class="point" style="left: 10%;">
+          <div class="circle"></div>
+          <div class="content">
+            <h3>2018</h3>
+            <p class="big">Entrada no secundário</p>
+            <p class="medium">No Curso de Ciências e Tecnologias</p>
+            <p class="medium">Na Escola Secundária Frei Heitor Pinto (ESFHP)</p>
+          </div>
         </div>
-    </section>
+        <div class="point" style="left: 30%;">
+          <div class="circle"></div>
+          <div class="content">
+            <h3>2021</h3>
+            <p class="big">Entrada no Ensino Superior</p>
+            <p class="medium">Na Licenciatura em Engenharia Informática</p>
+            <p class="medium">Na Universidade da Beira Interior (UBI)</p>
+          </div>
+        </div>
+        <div class="point" style="left: 50%;">
+          <div class="circle"></div>
+          <div class="content">
+            <h3>2022</h3>
+            <p class="big">Trabalho como Barman</p>
+            <p class="medium">Nos Meses de Julho e Agosto</p>
+            <p class="medium">Na Piscina da Orca (Fundão)</p>
+          </div>
+        </div>
+        <div class="point" style="left: 70%;">
+          <div class="circle"></div>
+          <div class="content">
+            <h3>2023</h3>
+            <p class="big">Estágio de Verão</p>
+            <p class="medium">Entre os Meses de Julho e Setembro</p>
+            <p class="medium">Na Celfinet, Departamento de Data Management & Analytics</p>
+          </div>
+        </div>
+        <div class="point" style="left: 90%;">
+          <div class="circle"></div>
+          <div class="content">
+            <h3>2024</h3>
+            <p class="big">Conclusão da Licenciatura</p>
+            <p class="medium">Em Engenharia Informática</p>
+          </div>
+        </div>
+    </section>    
 
     <section id="projects" class="hidden">
         <h2>Projetos</h2>
@@ -216,15 +196,8 @@
             </div>
         </div>
     </section>
-    
-    <script>
-        function openPdf(pdfUrl) {
-            window.open(pdfUrl, '_blank');
-        }
-    </script>
-    
     <footer>
-        <p>&copy; 2024 António Cruz. All rights reserved.</p>
+        <p>&copy; Desenvolvido com paixão ❤️ 2024 António Cruz. Todos os direitos reservados.</p>
     </footer>
 
 </body>
